--- a/EntryPoint/EntryPoint.csproj
+++ b/EntryPoint/EntryPoint.csproj
@@ -13,7 +13,12 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.10"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
+
+    <Target Name="OpenAPI" AfterTargets="Build" Condition="$(Configuration)=='Debug'">
+        <Exec Command="dotnet swagger tofile --output ClientApp/static/swagger.yaml --yaml $(OutputPath)$(AssemblyName).dll v1" WorkingDirectory="$(ProjectDir)"/>
+    </Target>
 
     <ItemGroup>
         <!-- Don't publish the SPA source files, but do show them in the project files list -->
